# spam_classification_api

./: LICENSE  README.md  client.py  model.ipynb  pyproject.toml  server.py  spam_model.keras  spam_vectorizer.pkl
