[project]
name = "spam-rest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "ipykernel>=6.30.1",
    "keras-tuner>=1.4.7",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "uvicorn[standard]>=0.35.0",
]
